# bias_scope

./: .gitignore  404.html  CLAUDE_CODE_GENERATED_TEXT_IMPLEMENTATION.md  CODE_ENHANCEMENT_REQUIREMENTS.md  GENERATED_TEXT_EDGE_CASE_TEST_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Implementations.md  LICENSE  README.md  TESTING_SETUP.md  TEST_ENHANCEMENT_REQUIREMENTS.md  coverage.txt  coverage_final.txt  docu.md  index.html  mkdocs.yml  new_metrics.md  objects.inv  pyproject.toml  requirements-test-only.txt  requirements.txt  sitemap.xml  test_new_metrics_only.py  verify_generated_text_metrics.py
.github/workflows/: ci.yml  docs.yml
api/embeddings/ceat/: index.html
api/embeddings/seat/: index.html
api/overview/: index.html
authors/: index.html
contributing/: index.html
docs/: authors.md  contributing.md  index.md
docs/api/: overview.md
docs/api/prompts/: bbq.md  (+10 more)
docs/getting-started/: installation.md  quickstart.md
docs/javascripts/: sidebar-visibility.js
docs/stylesheets/: extra.css
examples/: metric_usage_examples.py
examples/embeddings_based/: ceat.py  seat.py  sentence_bias_score.py  weat.py
examples/generated_text_based/: cooccurrence_bias_score.py  counterfactual_sentiment_bias.py  demographic_representation.py  emt.py  fgb.py  gender_polarity.py  honest.py  marked_persons.py  perspective_api.py  pgb.py  psycholinguistic_norms.py  regard_score.py  score_parity.py  social_group_substitution.py  stereotypical_associations.py  toxicity_fraction.py  toxicity_probability.py
examples/probability_based/: advanced_custom_model_wrapper.py  aul.py  aula.py  cat.py  cbs.py  crows_pairs.py  disco.py  icat.py  lmb.py  lpbs.py
examples/prompts_based/: analogical_reasoning_bias.py  bbq.py  bold.py  counterfactual_fairness.py  demographic_representation_bias.py  opinion_consistency_across_personas.py  realtoxicityprompts.py  stereoset.py  tof_nof.py  truthfulqa.py  unqover.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
results/emnlp/: CONFIGURATION.md  METHODOLOGY.md  bbq.json  crows_pairs.json  honest.json  summary.md  table.csv  weat.json
scripts/experiments/: emnlp_reproduction.py  finalize_emnlp.py
search/: search_index.json
src/bias_scope/: __init__.py  base.py  embeddings_based_metrics.py  utils.py
src/probability-based/: __init__.py
tests/: test_disco.py  test_embedding_metrics.py
tests/test_embeddings/: __init__.py  test_ceat.py  test_cls_pooling.py  test_embedding_helper.py  test_seat.py  test_sentence_bias_score.py  test_sentence_embeddings.py  test_weat.py  test_word_embeddings.py
tests/test_examples/: test_metric_usage_examples.py  test_public_exports.py
tests/test_generated_text/: __init__.py  test_perspective_api.py  test_regard_score.py  test_score_parity.py  test_toxicity_fraction.py  test_toxicity_probability.py
tests/test_generated_text_based/: test_cooccurrence_bias_score.py  test_counterfactual_sentiment_bias.py  test_demographic_representation.py  test_emt.py  test_fgb.py  test_gender_polarity.py  test_honest.py  test_marked_persons.py  test_perspective_api.py  test_pgb.py  test_psycholinguistic_norms.py  test_regard_score.py  test_score_parity.py  test_social_group_substitution.py  test_stereotypical_associations.py  test_toxicity_fraction.py  test_toxicity_probability.py
tests/test_probability_based/: __init__.py  test_aul.py  test_aula.py  test_cat.py  test_cbs.py  test_crows_pairs.py  test_disco.py  test_icat.py  test_lmb.py  test_lpbs.py  test_scorers.py  test_wordpiece_mode.py
tests/test_prompts_based/: test_analogical_reasoning_bias.py  test_bbq.py  test_bold.py  test_counterfactual_fairness.py  test_demographic_representation_bias.py  test_instruction_hierarchy_test.py  test_opinion_consistency_across_personas.py  test_realtoxicityprompts.py  test_stereoset.py  test_tof_nof.py  test_truthfulqa.py  test_unqover.py
(+137 files in other folders)
