[project]
name = "bias-scope"
version = "0.1.0"
description = ""
authors = [
    {name = "ChadiHelwe", email = "chadi.helwe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3",
    "torch>=2.5.1",
]

[project.optional-dependencies]
dev = [
    "isort>=5.13.2",
    "pytest>=8.3.3",
    "coverage>=7.6.4",
    "black>=26.1.0",
    "nox>=2025.11.12",
]
docs = [
    "mkdocs>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bias_scope"]
