[project]
name = "bias-scope"
version = "0.1.0"
description = "A library for detecting biases in machine learning models."
authors = [
    {name = "ChadiHelwe", email = "chadi.helwe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3",
    "requests>=2.28.0",
    "torch>=2.5.1",
    "transformers>=4.31.0",
    "datasets>=2.0.0",
    "litellm>=1.0.0",
    "sentence-transformers>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "isort>=5.13.2",
    "pytest>=9.0.0",
    "coverage>=7.6.4",
    "black>=26.1.0",
    "nox>=2025.11.12",
]
docs = [
    "mkdocs>=1.6.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bias_scope"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["bias_scope", "tests"]
