[project]
name = "bias-scope"
version = "0.1.1"
description = "A library for detecting biases in machine learning models."
authors = [
    {name = "ChadiHelwe", email = "chadi.helwe@gmail.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["bias", "fairness", "language-models", "machine-learning", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.1.3",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/RAINLabLAU/bias_scope"
Documentation = "https://github.com/RAINLabLAU/bias_scope/tree/main/docs"
Repository = "https://github.com/RAINLabLAU/bias_scope"
Issues = "https://github.com/RAINLabLAU/bias_scope/issues"

[project.optional-dependencies]
torch = [
    "torch>=2.5.1",
    "transformers>=4.31.0",
]
embeddings = [
    "sentence-transformers>=2.0.0",
]
datasets = [
    "datasets>=2.0.0",
]
llm = [
    "litellm>=1.0.0",
]
all = [
    "torch>=2.5.1",
    "transformers>=4.31.0",
    "sentence-transformers>=2.0.0",
    "datasets>=2.0.0",
    "litellm>=1.0.0",
]

dev = [
    "build>=1.2.0",
    "hatchling>=1.25.0",
    "isort>=5.13.2",
    "pytest>=9.0.0",
    "twine>=5.0.0",
    "coverage>=7.6.4",
    "black>=26.1.0",
    "nox>=2025.11.12",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bias_scope"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["bias_scope", "tests"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]